[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" path="res://scenes/sections/base_section.tscn" id="1_0"]
[ext_resource type="Script" path="res://scripts/ui/resources_section.gd" id="2_0"]

[node name="resources_section" instance=ExtResource("1_0")]
script = ExtResource("2_0")

[node name="MarginContainer" parent="." index="0"]
[node name="VBoxContainer" parent="MarginContainer" index="0"]
[node name="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
[node name="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]
[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "Resources & Materials"

[node name="content" parent="MarginContainer/VBoxContainer" index="1"]

[node name="MineralRichnessContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="MineralRichnessLabel" type="Label" parent="MarginContainer/VBoxContainer/content/MineralRichnessContainer"]
layout_mode = 2
text = "Mineral Richness:"

[node name="MineralRichnessSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/MineralRichnessContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="MineralRichnessSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/MineralRichnessContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="OreDepositsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="OreDepositsLabel" type="Label" parent="MarginContainer/VBoxContainer/content/OreDepositsContainer"]
layout_mode = 2
text = "Ore Deposits:"

[node name="OreDepositsSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/OreDepositsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 40.0
step = 1.0

[node name="OreDepositsSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/OreDepositsContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 40.0
step = 1.0

[node name="GemstoneRarityContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="GemstoneRarityLabel" type="Label" parent="MarginContainer/VBoxContainer/content/GemstoneRarityContainer"]
layout_mode = 2
text = "Gemstone Rarity:"

[node name="GemstoneRaritySlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/GemstoneRarityContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 20.0
step = 1.0

[node name="GemstoneRaritySpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/GemstoneRarityContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 20.0
step = 1.0

[node name="WoodAvailabilityContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="WoodAvailabilityLabel" type="Label" parent="MarginContainer/VBoxContainer/content/WoodAvailabilityContainer"]
layout_mode = 2
text = "Wood Availability:"

[node name="WoodAvailabilitySlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/WoodAvailabilityContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 60.0
step = 1.0

[node name="WoodAvailabilitySpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/WoodAvailabilityContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 60.0
step = 1.0


